--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   db:
     image: postgres
     volumes:
-      - ./tmp/db:/var/lib/postgresql/data
+      - ./tmp/db:/var/lib/postgresql/data #wslの場合は絶対パスで.前を記述
     environment:
       POSTGRES_USER: 'admin'
       POSTGRES_PASSWORD: 'admin-pass'
@@ -11,7 +11,7 @@ services:
     build: .
     command: bash -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
-      - .:/myapp
+      - .:/myapp #wslの場合は絶対パスで.前を記述
     ports:
       - "3000:3000"
     depends_on:
